--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -17,19 +17,10 @@
                 <ul>
                   <li><a href="#">Pricing</a></li>
                   <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Pricelist<i class="fas fa-caret-right"></i></a>
+                  <li><a href="#">Pricelist</a></i>
                     
-                    <div class="dropdown-menu-1">
-                      <ul>
-                        <li><a href="#">Quater-1</a></li>
-                        <li><a href="#">Quater-2</a></li>
-                        <li><a href="#">Quater-3</a></li>
-                        <li><a href="#">Quater-4</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li><a href="#">FAQ</a></li>
-                </ul>
+                 
+               </ul>
               </div>
 			   <li><a href="../portal.html">Home</a></li>
     </div>
