--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -16,7 +16,7 @@
             <div class="dropdown-menu">
                 <ul>
 				<li><a href="#">Pricelist</a></i>
-                  <li><a href="#">Schemes</a></li>
+                  <li><a href="../report/schemes.html">Schemes</a></li>
                   <li><a href="#">Portfolio</a></li>
                   <li><a href="#">Others</a></i>
                     
