--- a/portal/about.html
+++ b/portal/about.html
@@ -2,6 +2,12 @@
 <!-- saved from url=(0063)E:\Server\xampp\htdocs\nissa\portal.html# -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
+	
+  
+  
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8" />
@@ -86,6 +92,15 @@
           </div>
         </div>
       </div>
+	  
+	   <script>
+        // Function to update the time display
+        function updateTime() {
+            const now = new Date();
+            document.getElementById('time').textContent = now.toLocaleTimeString();
+        }
+        updateTime(); // Call the function to display the initial time
+    </script>
 
     </section><!-- /Hero Section -->
   </main>
