--- a/portal/baled.html
+++ b/portal/baled.html
@@ -4,6 +4,16 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+<!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30;url=../index.html">
+ 
+<!-- update while open --> 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
+
 <!-- Fonts -->
   <link href="https://fonts.googleapis.com/" rel="preconnect">
   <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="">
@@ -472,6 +482,16 @@ function myFunction() {
   }
 }
 </script>
+
+<!-- update while open -->
+	  <script>
+        // Function to update the time display
+        function updateTime() {
+            const now = new Date();
+            document.getElementById('time').textContent = now.toLocaleTimeString();
+        }
+        updateTime(); // Call the function to display the initial time
+    </script>
 
 </body>
 </head>
