--- a/portal/portal.html
+++ b/portal/portal.html
@@ -1,6 +1,12 @@
  <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30;url=../index.html">
+
+<!-- update while open -->
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -73,6 +79,7 @@
     </script>
     <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
 	
+<!-- update while open -->	
 <script>
         // Function to update the time display
         function updateTime() {
