--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -1,6 +1,12 @@
 <html lang="en">
   <head>
   
+  <!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30;url=../index.html">
+ 
+<!-- update while open --> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
@@ -30,6 +36,8 @@
               </div>
 			   <li><a href="../portal.html">Home</a></li>
     </div>
+	
+	<!-- update while open -->
 	  <script>
         // Function to update the time display
         function updateTime() {
