--- a/portal/team.html
+++ b/portal/team.html
@@ -2,6 +2,15 @@
 <!-- saved from url=(0063)E:\Server\xampp\htdocs\nissa\portal.html# -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  
+ 
+ 
+ 
+  <!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30;url=../index.html">
+ 
+<!-- update while open --> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
@@ -84,6 +93,8 @@
         </div>
       </div>
 	  
+	  
+	  <!-- update while open --> 
 	   <script>
         // Function to update the time display
         function updateTime() {
