--- a/portal/ledindex.html
+++ b/portal/ledindex.html
@@ -2,6 +2,13 @@
 <!-- saved from url=(0063)E:\Server\xampp\htdocs\nissa\portal.html# -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30;url=../index.html">
+
+
+<!-- update while open -->
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -75,7 +82,9 @@
         }
         
     </script>
-	
+
+
+<!-- update while open -->	
 	<script>
         // Function to update the time display
         function updateTime() {
