--- a/portal/report/schemes.html
+++ b/portal/report/schemes.html
@@ -1,3 +1,12 @@
+
+<html lang="en">
+  <head>
+  
+  <!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="300;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+
 <iframe src="schemes\Reseller Ka Badshaah.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\75-24-25-IOAOD-SERVO EARLY ADVANTAGE SCHEME-FEB'25.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\76-24-25-IOAOD-SERVO DEO BOOSTER SCHEME FEB-MAR'25.pdf" width="100%" height="100%"></iframe>
@@ -14,3 +23,5 @@
 <iframe src="schemes\67-24-25-IOAOD-RESELLER PRODUCT DISCOUNT SCHEME JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\68-24-25-IOAOD-INCENTIVE SCHEME FOR SERVOSYSTEM 68  SERVOHYDRASHAKTI 68 MESH SP 320 - JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\72-24-25-IOAOD-SERVO BUCKET PROMOTION SCHEME - JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
+
+</head>
