--- a/portal/spo.html
+++ b/portal/spo.html
@@ -1,5 +1,10 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+ <!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+	
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -18,7 +23,7 @@
   <!-- Main CSS File -->
     <link href="./portal_files/style.css" rel="stylesheet">
 
-
+</head>
 
 <head>
 
