--- a/portal/oemled.html
+++ b/portal/oemled.html
@@ -1,6 +1,12 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+
+<!-- inactivity -->
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+	
   <meta name="description" content="">
   <meta name="keywords" content="">
 
