--- a/portal/portal.html
+++ b/portal/portal.html
@@ -4,9 +4,14 @@
 <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30;url=../index.html">
+    <meta http-equiv="refresh" content="120;url=../index.html">
 
-<!-- update while open -->
+
+<!-- update while open --> 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content=""> <!-- Refresh every seconds if 30 sec is "30" -->
+
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -26,12 +31,8 @@
     <link href="./portal_files/style.css" rel="stylesheet">
 
 
-
+</head>
 <head>
-
-<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
