--- a/portal/team.html
+++ b/portal/team.html
@@ -8,12 +8,12 @@
   <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30;url=../index.html">
+    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
  
 <!-- update while open --> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="10"> <!-- Refresh every 10 seconds -->
+    <meta http-equiv="refresh" content=""> <!-- Refresh every 10 seconds -->
  
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Team</title>
