--- a/portal/portal.html
+++ b/portal/portal.html
@@ -4,7 +4,7 @@
 <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="10;URL=../index.html">
+    <meta http-equiv="refresh" content="10;URL=.https://servodata5.github.io/nissa">
 
 
 <!-- update while open --> 
