--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -4,7 +4,7 @@
   <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+    <meta http-equiv="refresh" content="120;url=https://servodata5.github.io/nissa/">  <!-- Refresh every seconds if 2 min is "120" -->
  
 <!-- update while open --> 
   <meta charset="UTF-8">
