--- a/portal/baled.html
+++ b/portal/baled.html
@@ -7,7 +7,7 @@
 <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="120;url=../index.html">
+    <meta http-equiv="refresh" content="120;url=.https://servodata5.github.io/nissa/">
  
 <!-- update while open --> 
   <meta charset="UTF-8">
