--- a/portal/oemled.html
+++ b/portal/oemled.html
@@ -5,7 +5,7 @@
 <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+    <meta http-equiv="refresh" content="120;url=https://servodata5.github.io/nissa/">  <!-- Refresh every seconds if 2 min is "120" -->
 	
   <meta name="description" content="">
   <meta name="keywords" content="">
