--- a/portal/report/schemes.html
+++ b/portal/report/schemes.html
@@ -5,7 +5,7 @@
   <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="300;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+    <meta http-equiv="refresh" content="300;url=https://servodata5.github.io/nissa/">  <!-- Refresh every seconds if 2 min is "120" -->
 
 <iframe src="schemes\Reseller Ka Badshaah.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\75-24-25-IOAOD-SERVO EARLY ADVANTAGE SCHEME-FEB'25.pdf" width="100%" height="100%"></iframe>
