--- a/portal/spo.html
+++ b/portal/spo.html
@@ -3,7 +3,7 @@
  <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="120;url=../index.html">  <!-- Refresh every seconds if 2 min is "120" -->
+    <meta http-equiv="refresh" content="120;url=https://servodata5.github.io/nissa/">  <!-- Refresh every seconds if 2 min is "120" -->
 	
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
