--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- inactivity -->
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30;url=../index.html">  <!-- Refresh every seconds if 30 sec is "30" -->
+    <meta http-equiv="refresh" content="5;url=https://servodata5.github.io/nissa/">  <!-- Refresh every seconds if 30 sec is "30" -->
 	
 	<!-- update while open --> 
   <meta charset="UTF-8">
@@ -64,6 +64,9 @@
 		
 	  
 </div></form>
+
+
+
 
 <!-- update while open -->
 	  <script>
