--- a/portal/px-nissa/brlp.html
+++ b/portal/px-nissa/brlp.html
@@ -30,7 +30,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barrel Price</title>
-    <link rel="stylesheet" href="../portal_files/style2.css">    
+    <link rel="stylesheet" href="../portal_files/style2.css">  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>	
+
 
 
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
@@ -39,7 +41,8 @@
             <h1>Barrel Price List</h1>
        </div>
         	 <ul id="menuList">	
-		<button class="btn btn-primary" onclick="smlp.html" type="button">
+		<p></p>
+	
 		<li><a href="smlp.html">Small Pack</a></li>
 		
 		<button class="btn btn-primary" onclick="portal.html" type="button">
