--- a/portal/px-nissa/smlp.html
+++ b/portal/px-nissa/smlp.html
@@ -28,9 +28,10 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">	 
     <title>Small Pack Pricelist</title>
-    <link rel="stylesheet" href="../portal_files/style2.css">    
+    <link rel="stylesheet" href="../portal_files/style2.css">  
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>	
 
 
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
@@ -39,11 +40,11 @@
             <h1>Small Pack Price List</h1>
        </div>
         	 <ul id="menuList">	
-		<button class="btn btn-primary" onclick="brlp.html" type="button">
+		<p></p>
 		<li><a href="brlp.html">Barrel Price</a></li>
 		
 		<button class="btn btn-primary" onclick="portal.html" type="button">
-            <li><a href="../portal.html">Home</a></li>
+    <li><a href="../portal.html">Home</a></li>
             
         </ul>
         <div class="menu-icon">
