--- a/portal/ledindex.html
+++ b/portal/ledindex.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="30;url=https://servodata5.github.io/nissa/">
 
-
+<!-- update while open --> 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="30"> <!-- Refresh every 10 seconds -->
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
