--- a/portal/baled.html
+++ b/portal/baled.html
@@ -12,7 +12,7 @@
 <!-- update while open --> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content=""> <!-- Refresh every 10 seconds -->
+    <meta http-equiv="refresh" content="30"> <!-- Refresh every 10 seconds -->
 
 <!-- Fonts -->
   <link href="https://fonts.googleapis.com/" rel="preconnect">
