--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -28,7 +28,7 @@
                 <ul>
 				<li><a href="smlp.html">Pricelist</a></i>
                   <li><a href="../report/schemes.html">Schemes</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="../tools/tools.html">Tools</a></li>
                   <li><a href="#">Others</a></i>
                     
                  
