--- a/portal/tools/tools.html
+++ b/portal/tools/tools.html
@@ -18,40 +18,36 @@
 <!-- Fonts -->
   <link href="https://fonts.googleapis.com/" rel="preconnect">
   <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="">
-  <link href="./portal_files/css2" rel="stylesheet">
+  <link href="../portal_files/css2" rel="stylesheet">
 
 <!-- Vendor CSS Files -->
- <link href="./portal_files/bootstrap.min.css" rel="stylesheet">
-  <link href="./portal_files/bootstrap-icons.css" rel="stylesheet">
-  <link href="./portal_files/glightbox.min.css" rel="stylesheet">
-  <link href="./portal_files/swiper-bundle.min.css" rel="stylesheet">
+ <link href="../portal_files/bootstrap.min.css" rel="stylesheet">
+  <link href="../portal_files/bootstrap-icons.css" rel="stylesheet">
+  <link href="../portal_files/glightbox.min.css" rel="stylesheet">
+  <link href="../portal_files/swiper-bundle.min.css" rel="stylesheet">
   
   <!-- Main CSS File -->
-    <link href="./portal_files/style1.css" rel="stylesheet">
+    <link href="../portal_files/style1.css" rel="stylesheet">
 
 
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oemled</title>
-    <link rel="stylesheet" href="style.css">    
+    <title>protools</title>
+    <link rel="stylesheet" href="./style.css">    
 
 
 <body class="index-page" data-aos-easing="ease-in-out" data-aos-duration="800" data-aos-delay="0">
     <nav>
         <div class="logo">
-            <h1>OEM ACCOUNT STATEMENT</h1>
+            <h1>PROJECT TOOLS</h1>
        </div>
         <ul id="menuList">
-		<button class="btn btn-primary" onclick="roled.html" type="button">
-		<li><a href="roled.html">R/O</a></li>
 		
-		<button class="btn btn-primary" onclick="baled.html" type="button">
-		<li><a href="baled.html">Bazaar</a></li>
 		
 		<button class="btn btn-primary" onclick="portal.html" type="button">
-            <li><a href="portal.html">Home</a></li>
+            <li><a href="../portal.html">Home</a></li>
             
         </ul>
         <div class="menu-icon">
@@ -183,22 +179,14 @@ th, td {
  <thead>  
 <tr>
 	  <th>SL No </th>
-      <th>Customer Name </th>
-      <th>View/Download</th>
+      <th>Project Name</th>
+      <th>Goto</th>
     </tr>
 </thead>
   <tbody>
   
-<tr> <td>1</td><td>BANALARI WORLD CAR</td><td><a href="report/ledgers/BANALARI WORLD CAR.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>2</td><td>GOENKA ENGINEERING WORK</td><td><a href="report/ledgers/GOENKA ENGINEERING WORK.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>3</td><td>GOENKA ENG WORK MAWBLEI</td><td><a href="report/ledgers/GOENKA ENG WORK MAWBLEI.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>4</td><td>RANI MOTOR GARIKHANA</td><td><a href="report/ledgers/RANI MOTOR GARIKHANA.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>5</td><td>RANI MOTOR MAWBLEI</td><td><a href="report/ledgers/RANI MOTOR MAWBLEI.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>6</td><td>RANI MOTOR NONGPOH</td><td><a href="report/ledgers/RANI MOTOR NONGPOH.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>7</td><td>RANI MOTOR NONGSTOIN</td><td><a href="report/ledgers/RANI MOTOR NONGSTOIN.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>8</td><td>RANI SPARES PARTS</td><td><a href="report/ledgers/RANI SPARES PARTS.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>9</td><td>SHILLONG HYUNDAI</td><td><a href="report/ledgers/SHILLONG HYUNDAI.pdf">Download&nbsp;Here</a></td></tr>
-<tr> <td>10</td><td>BY ZERO FUTURA</td><td><a href="report/ledgers/BY ZERO FUTURA.pdf">Download&nbsp;Here</a></td></tr>
+<tr><td>1</td><td>Compress Image</td><td><a href="../tools/compress/cmpr.html">Open&nbsp;Tools</a></td></tr>
+<tr><td>2</td><td>next</td><td><a href="#">Open&nbsp;Tools</a></td></tr>
 
 
 </tbody>
