--- a/portal/portal.html
+++ b/portal/portal.html
@@ -10,7 +10,7 @@
 <!-- update while open --> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="120"> <!-- Refresh every seconds if 30 sec is "30" -->
+    <meta http-equiv="refresh" content=""> <!-- Refresh every seconds if 30 sec is "30" -->
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
