--- a/portal/report/schemes.html
+++ b/portal/report/schemes.html
@@ -23,5 +23,5 @@
 <iframe src="schemes\67-24-25-IOAOD-RESELLER PRODUCT DISCOUNT SCHEME JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\68-24-25-IOAOD-INCENTIVE SCHEME FOR SERVOSYSTEM 68  SERVOHYDRASHAKTI 68 MESH SP 320 - JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
 <iframe src="schemes\72-24-25-IOAOD-SERVO BUCKET PROMOTION SCHEME - JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
-
+<iframe src="schemes\01G-24-25-IOAOD-AMMENDMENT IN INCENTIVE SCHEME FOR CHANNEL PARTNERS FY 2024-25 FOR JAN-MAR'25.pdf" width="100%" height="100%"></iframe>
 </head>
