--- a/portal/px-nissa/px-nissa-dt.html
+++ b/portal/px-nissa/px-nissa-dt.html
@@ -22,6 +22,7 @@
       <h1 class="logo">Better Solution For<span>Business</span></h1>
       <ul>
        
+	    <li><a href="../master_data/customas.html">Bazaar Master Names<i class="fas fa-caret-down"></i></a>
         <li><a href="#">Others <i class="fas fa-caret-down"></i></a>
 
             <div class="dropdown-menu">
