--- a/portal/ledlog.html
+++ b/portal/ledlog.html
@@ -56,12 +56,13 @@
                   
 		  <!--<input type="password" placeholder="password"/>-->
 		  <button id="submitid" onsubmit="return validateForm()";">Continue</button>
+		   
 		<!--  <p class="social_LoginHeader">Or use your social accounts to login:</p> -->
 		<!--  <p>Social icons Box</p> -->
                 <p>     </p>
                 <p>    </p>
 		
-		
+		<a  class="btn-getstarted" href="portal.html" class="">Home</a></a>
 	  
 </div></form>
 
