--- a/portal/ledlog.html
+++ b/portal/ledlog.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./obrareq_files/login_Css.css">
 <link rel="stylesheet" href="./obrareq_files/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
 <!-- inactivity -->
@@ -52,7 +53,7 @@
   
                   <i class="fa fa-user iconStyleClass" aria-hidden="true"></i>
                   <input Password: <input type="password" name="password">
-                  <i class="fa fa-user iconStyleClass" aria-hidden="true"></i>
+                  <i class="fa fa-lock iconStyleClass" aria-hidden="true"></i>
                   
 		  <!--<input type="password" placeholder="password"/>-->
 		  <button id="submitid" onsubmit="return validateForm()";">Continue</button>
