--- a/portal/about.html
+++ b/portal/about.html
@@ -86,7 +86,7 @@
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center aos-init aos-animate" data-aos="zoom-out">
             <h1>NISSA IndianOil</h1>
-            <p>We are team of talented Top class programmer</p>
+            <p>united we stand devided we fall</p>
             <div class="d-flex">
               <a href="file:///C:/Users/Administrator/Desktop/New%20folder/portal/index.html#about" class="btn-get-started">Get Started</a>
 			  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
