--- a/portal/px-nissa/brlp.html
+++ b/portal/px-nissa/brlp.html
@@ -45,7 +45,8 @@
 		<p></p>
 	
 		<li><a href="smlp.html">Small Pack</a></li>
-		 <button class="btn btn-primary" onclick="downloadPDF()">PDF</button> 
+		<li><a href="fleettruro.html">Fleet Discount</a></li>
+		 <button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button> 
 		<button class="btn btn-primary" onclick="portal.html" type="button">
             <li><a href="../portal.html">Home</a></li>
           
@@ -270,6 +271,10 @@ th, td {
 <tr> <td>7330403</td><td>IOC CLEARBLUE-210 L HD</td><td>210</td><td>44</td><td>0</td><td>0</td><td>0</td><td>51.92</td><td>10903.2</td></tr>
 <tr> <td>3002403</td><td>SERVOSYSTEM 46-210 L HD</td><td>210</td><td>195</td><td>73</td><td>0</td><td>0</td><td>143.96</td><td>30231.6</td></tr>
 <tr> <td>3006403</td><td>SERVOSYSTEM 68-210 L HD</td><td>210</td><td>205</td><td>71</td><td>0</td><td>0</td><td>158.12</td><td>33205.2</td></tr>
+<tr> <td>3615401</td><td>SERVOMESH SP 460 - 210L BRL</td><td>210</td><td>224</td><td>69</td><td>0</td><td>0</td><td>182.9</td><td>38409</td></tr>
+
+
+
 
 </tbody>
 </table> 
