--- a/portal/px-nissa/smlp.html
+++ b/portal/px-nissa/smlp.html
@@ -44,7 +44,8 @@
         	 <ul id="menuList">
 		<p></p>
 		<li><a href="brlp.html">Barrel Price</a></li>
-		<button class="btn btn-primary" onclick="downloadPDF()">PDF</button>
+		<li><a href="fleettruro.html">Fleet Discount</a></li>
+		<button class="btn btn-primary" onclick="downloadPDF()">Download PDF</button>
 		<button class="btn btn-primary" onclick="portal.html" type="button">
     <li><a href="../portal.html">Home</a></li>
             
