--- a/portal/baled.html
+++ b/portal/baled.html
@@ -26,7 +26,7 @@
   <link href="./portal_files/swiper-bundle.min.css" rel="stylesheet">
   
   <!-- Main CSS File -->
-    <link href="./portal_files/style1.css" rel="stylesheet">
+    <link href="./portal_files/style2.css" rel="stylesheet">
 
 
 <head>
@@ -94,7 +94,7 @@ th, td {
 }
 
 .header-row th { /* Style header row cells differently */
-  background-color: #f2f2f2;
+  background-color: #FFFF00;
   font-weight: bold;
 } 
 
