--- a/portal/px-nissa/fleettruro.html
+++ b/portal/px-nissa/fleettruro.html
@@ -107,7 +107,7 @@ th, td {
 }
 
 .header-row th { /* Style header row cells differently */
-  background-color: #f2f2f2;
+  background-color: #FFFF00;
   font-weight: bold;
 } 
 
