--- a/portal/px-nissa/smlp.html
+++ b/portal/px-nissa/smlp.html
@@ -189,7 +189,7 @@ th, td {
 <th>Margin/ Item</th>
 <th>Margin/L</th>
 <th>Margin %</th>
-<th>PER CASE</th>
+<th>PER CASE/BUC</th>
 </tr>
   
 </thead>
