--- a/portal/px-nissa/smlp.html
+++ b/portal/px-nissa/smlp.html
@@ -184,7 +184,7 @@ th, td {
 <th>DLP/Pc</th>
 <th>Disc/L</th>
 <th>Market Support /L</th>
-<th>SUMMER/BONANZA SCHEME /L</th>
+<th>SUMMER/ BONANZA</th>
 <th>Invoice rate/ Item	</th>
 <th>Margin/ Item</th>
 <th>Margin/L</th>
