--- a/portal/px-nissa/purchase/purlog.html
+++ b/portal/px-nissa/purchase/purlog.html
@@ -27,7 +27,7 @@
   }
 
   // Simulate server-side validation (replace with actual server-side check)
-  if (username == "324046" && password == "admin") {
+  if (username == "324046" && password == "admin1234") {
     // Redirect to portal.html if credentials are correct
     window.location.href = "pursmlp.html";  // Or a relative path like "./html2.html" if in the same directory
     return false; // Prevent default form submission
